Mar 21 2003  2.9.1  Added CHANCHANGE alert for BSSID's that get a beacon
                     on a different channel
Mar 20 2003  2.9.1  Various code cleanups and reorganizations
                    Removed alert filter string, too unwieldy from the code
                     and redundant
                    Migrated rest of alerts to new alert backend, removed
                     GSTSRCH alert (should be in L3 IDS like snort)
                    Fixed lots of CVS errors of mis-added files
                    Reduced internal packet buffer to 2048.  Minor memory
                     savings.
                    Migrated drone output to a per-listener ring buffer, fixed
                     spin condition when listener disconnects inbetween writes,
                     fixed incomplete drone packet writes.
                    Applied patch from Faust to eliminate warnings when gps is
                     disabled.
Mar 18 2003  2.9.1  Fixed new alert logic, added alert fields to the config
                     file, started moving existing alerts to new alert
                     logic.
Mar 17 2003  2.9.1  Worked on new alert throttling framework.  Alerts are 
                     probably broken right now for the client.
Mar 16 2003  2.9.1  Switched (returned) to statically allocated packet buffers
                     for a minor speed improvement.
                    Removed ability to filter outbound drone streams since it
                     would break badly if a client didn't connect immediately.
                    Restructured timer code
Mar 13 2003  2.9.1  Removed redundant select() in several capture sources
                    Fixed drone capture source dropping dead under high loads
                    Fixed wtaplocaldump compile errors
                    Wrapped swap64 in ifndef for *BSD
                    Renamed swap64 and local *to*64 to avoid bsd collisions
Mar 10 2003  2.9.1  Tweaked wtaplocaldump endian headers