@@ -56,7 +56,7 @@ int ParseCardLines(vector<string> *in_lines, vector<capturesource *> *in_sources
 }
 
 int BindRootSources(vector<capturesource *> *in_capsources, map<string, int> *in_enable,
-                   int filter_enable) {
+                   int filter_enable, Timetracker *in_tracker) {
     // Now loop through each of the sources - parse the engines, interfaces, types.
     // Open any that need to be opened as root.
     for (unsigned int src = 0; src < in_capsources->size(); src++) {
@@ -191,12 +191,14 @@ int BindRootSources(vector<capturesource *> *in_capsources, map<string, int> *in
             exit(1);
         }
 
-        // Open the packet source
-        if (csrc->source != NULL)
+        // Open the packet source and assign the timetracker
+        if (csrc->source != NULL) {
             if (csrc->source->OpenSource(csrc->interface.c_str(), csrc->cardtype) < 0) {
                 fprintf(stderr, "FATAL: Source %d (%s): %s\n", src, csrc->name.c_str(), csrc->source->FetchError());
                 exit(1);
             }
+            csrc->source->AddTimetracker(in_tracker);
+        }
     }
 
 
@@ -204,7 +206,7 @@ int BindRootSources(vector<capturesource *> *in_capsources, map<string, int> *in
 }
 
 int BindUserSources(vector<capturesource *> *in_capsources, map<string, int> *in_enable,
-                   int filter_enable) {
+                    int filter_enable, Timetracker *in_tracker) {
     for (unsigned int src = 0; src < in_capsources->size(); src++) {
         capturesource *csrc = (*in_capsources)[src];
 
@@ -238,12 +240,14 @@ int BindUserSources(vector<capturesource *> *in_capsources, map<string, int> *in
                 csrc->source = new DroneSource;
             }
 
-            // Open the packet source
-            if (csrc->source != NULL)
+            // Open the packet source and add the timer tracker
+            if (csrc->source != NULL) {
                 if (csrc->source->OpenSource(csrc->interface.c_str(), csrc->cardtype) < 0) {
                     fprintf(stderr, "FATAL: Source %d (%s): %s\n", src, csrc->name.c_str(), csrc->source->FetchError());
                     exit(1);
                 }
+                csrc->source->AddTimetracker(in_tracker);
+            }
         }
     }
 
