@@ -16,6 +16,10 @@
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
+#include "config.h"
+
+#include <sys/time.h>
+
 #include "timetracker.h"
 
 Timetracker::Timetracker() {
